--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/terms.component.html
@@ -27,11 +27,11 @@
     </ng-container>
     <ng-container matColumnDef="startDate">
       <th mat-header-cell *matHeaderCellDef>Start Date</th>
-      <td mat-cell *matCellDef="let term">{{term.startDate}}</td>
+      <td mat-cell *matCellDef="let term">{{convertIsoDateToDdMmYyyy(term.startDate)}}</td>
     </ng-container>
     <ng-container matColumnDef="endDate">
       <th mat-header-cell *matHeaderCellDef>End Date</th>
-      <td mat-cell *matCellDef="let term">{{term.endDate}}</td>
+      <td mat-cell *matCellDef="let term">{{convertIsoDateToDdMmYyyy(term.endDate)}}</td>
     </ng-container>
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef>Status</th>
