--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
@@ -5,6 +5,9 @@
         <!-- <div class="col-xl-9"> -->
         <!-- <div class="card" style="border-radius: 15px;"> -->
         <!-- <div class="card-body"> -->
+            <button (click)="startTerm()">
+                Start Term
+            </button>
         <form [formGroup]="termForm" (ngSubmit)="onSubmit()">
             <div class="row">
 
