--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.css
@@ -1,3 +1,48 @@
+main {
+    position: absolute;
+    height: 100vh;
+    width: calc(100vw - 100px);
+    max-height: 100vh;
+    max-width: calc(100vw - 100px);
+    left: 80px;
+    padding: 30px;
+
+}
+
+.container {
+    position: relative;
+}
+
+div:has(#page-title) {
+    display: flex;
+}
+
+button {
+    background: #535c91;
+    border: none;
+}
+
+
+.abc {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateY(-50%);
+}
+
+.abc button {
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-right: 10px;
+}
+
+.abc i {
+    margin-right: 10px;
+}
+
+
+
 form {
     width: 100%;
     /* Set form width to 100% */
@@ -10,7 +55,7 @@ form .col-6 {
 
 form input,
 form select {
-    border: 2px solid #575757   ;
+    border: 2px solid #575757;
     border-radius: 4px;
     /* width: 60%; */
     height: 50px;
@@ -22,7 +67,7 @@ form input:focus, form select:focus {
     border-color: rgb(133, 68, 165);
 }
 
-.form-field{
+.form-field {
     position: relative;
 }
 
@@ -38,7 +83,7 @@ form input:focus, form select:focus {
     font: 400 16px/1.5 'Roboto', sans-serif;
 } */
 
-.form-control:focus + label {
+.form-control:focus+label {
     top: 0px;
     padding: 10px;
     display: inline-block;
@@ -56,30 +101,4 @@ form div.error-message {
 table {
     text-align: center;
     overflow: scroll;
-}
-
-main {
-    box-shadow: none;
-    padding: 30px;
-}
-
-main>div {
-    border-radius: 24px;
-    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-    padding: 20px;
-}
-
-main {
-    position: absolute;
-    height: calc(100vh - 120px);
-    width: calc(100vw - 100px);
-    max-height: calc(100vh - 120px);
-    max-width: calc(100vw - 100px);
-    border-radius: 20px;
-    top: 100px;
-    left: 80px;
-    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
-    /* -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; */
 }
