--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -77,7 +77,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Action</th>
       <td mat-cell *matCellDef="let plan">
-        <a><mat-icon>visibility</mat-icon></a>
+        <a [routerLink]="[ '/plan-details/', plan.id ]"><mat-icon>visibility</mat-icon></a>
         <a *ngIf="showEditDeleteButton(plan)" (click)="openDeleteDialog(plan.id)"><mat-icon>delete</mat-icon></a>
       </td>
     </ng-container>
