--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
             <div class="col-md-6">
               <div class="card card-plain mt-4">
                 <div class="card-header pb-0 text-left bg-transparent">
-                  <h3 class="font-weight-bolder text-info text-gradient">Wealth come </h3>
+                  <h3 class="font-weight-bolder text-info text-gradient">Welcome </h3>
                   <p class="mb-0">Enter your email and password to sign in</p>
                 </div>
                 <div class="card-body">
