--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
@@ -12,8 +12,8 @@
           <a  class="create-button" (click)="startTerm()">
             <button> Start Term</button>
           </a>
-          <a  class="export-button">
-            <button> End Term</button>
+          <a  class="export-button" (click)="closeTerm()">
+            <button> Close Term</button>
           </a>
         </div>
       </div>
