--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/message-bar/message-bar.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/message-bar/message-bar.component.html
@@ -1,5 +1,5 @@
-<span [style.color]="data.httpStatusCode == 200 ? '#16ff00' : '#ff204e'">
-  <i *ngIf="data.httpStatusCode == 200" class="fa-regular fa-circle-check"></i>
-  <i *ngIf="data.httpStatusCode != 200" class="fa-regular fa-circle-xmark"></i>
-  {{data.message}}
+<!-- message-bar.component.html -->
+<span [style.color]="getMessageColor()">
+  <i [class]="getIconClass()"></i>
+  {{ data.message }}
 </span>
