--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/upload/upload.component.html
@@ -1,5 +1,5 @@
 
-<div class="wrapper">
+<div class="wrapper w-100">
   
   <form action="#" (click)="onClick()">
     <input type="file" class="file-input" (change)="onChange($event)" hidden />
