--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -5,10 +5,10 @@
       <h6>View all Monthly Reports</h6>
     </div>
     <div class="abc">
-      <a  [hidden]="(role == 'Accountant')" routerLink="/create-term" class="create-button" >
+      <a  [hidden]="(role == 'Accountant')" routerLink="/import-report" class="create-button" >
         <button> Import</button>
       </a>
-      <a routerLink="/import-reports" class="export-button">
+      <a routerLink="/export-reports" class="export-button">
         <button> Export</button>
       </a>
     </div>
