--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.css
@@ -113,7 +113,7 @@ form {
 }
 
 .preview-card {
-    min-width: 750px;
+    min-width: 850px;
     position: relative;
 }
 
@@ -124,6 +124,10 @@ form {
     flex-direction: column;
     align-items: center;
 
+}
+
+mat-label {
+    color: #4F85F2;
 }
 
 h3 {
