--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/import-report/import-report.component.html
@@ -1,3 +1,103 @@
-<p>
-  import-report works!
-</p>
+<main>
+  <div class="row">
+    <div class="col-md-12 col-lg-4">
+      <h1 class="mb-4">Import Report</h1>
+      <!-- <h5>Step 1/2: Please select a file to import</h5> -->
+      <mat-card class="import-card">
+        <form [formGroup]="reportForm">
+          <!-- <p>
+              <label for="term">Term *</label>
+            </p> -->
+          <mat-form-field>
+            <mat-label>Term</mat-label>
+            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="term" formControlName="term">
+              <mat-option *ngFor="let option of termOptions" [value]="option.value">
+                {{option.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <mat-form-field>
+            <mat-label>Month</mat-label>
+            <mat-select disableOptionCentering panelClass="dropDown-seasons-panel" id="month" formControlName="month">
+              <mat-option *ngFor="let option of monthOptions" [value]="option">
+                {{option}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </form>
+        <app-upload class="w-100" (fileSelected)="onFileSelected($event)"></app-upload>
+        <div class="buttons">
+          <button class="preview-button" (click)="onImport()">
+            <span>Preview</span>
+          </button>
+        </div>
+      </mat-card>
+    </div>
+    <div class="col-md-12 col-lg-8">
+      <mat-card class="preview-card">
+        <h3 class="mb-3">Preview</h3>
+        <div class="table mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" class="">
+            <ng-container matColumnDef="expense">
+              <th mat-header-cell *matHeaderCellDef> Expense </th>
+              <td mat-cell *matCellDef="let element"> {{element.expense}} </td>
+            </ng-container>
+            <ng-container matColumnDef="costType">
+              <th mat-header-cell *matHeaderCellDef> Cost Type </th>
+              <td mat-cell *matCellDef="let element"> {{element.costType}} </td>
+            </ng-container>
+            <ng-container matColumnDef="unitPrice">
+              <th mat-header-cell *matHeaderCellDef> Unit Price(VND) </th>
+              <td mat-cell *matCellDef="let element"> {{element.unitPrice}} </td>
+            </ng-container>
+            <ng-container matColumnDef="amount">
+              <th mat-header-cell *matHeaderCellDef> Amount </th>
+              <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+            </ng-container>
+            <ng-container matColumnDef="total">
+              <th mat-header-cell *matHeaderCellDef> Total(VND) </th>
+              <td mat-cell *matCellDef="let element"> {{element.total}} </td>
+            </ng-container>
+            <ng-container matColumnDef="projectName">
+              <th mat-header-cell *matHeaderCellDef> Project Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.projectName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="supplierName">
+              <th mat-header-cell *matHeaderCellDef> Supplier Name </th>
+              <td mat-cell *matCellDef="let element"> {{element.supplierName}} </td>
+            </ng-container>
+            <ng-container matColumnDef="pic">
+              <th mat-header-cell *matHeaderCellDef> PIC </th>
+              <td mat-cell *matCellDef="let element"> {{element.pic}} </td>
+            </ng-container>
+            <ng-container matColumnDef="notes">
+              <th mat-header-cell *matHeaderCellDef> Notes </th>
+              <td mat-cell *matCellDef="let element"> {{element.notes}} </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnHeaders;"></tr>
+          </table>
+  
+          <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
+            [hidden]="dataSource.length==0">
+          </mat-paginator>
+        </div>
+        <div>
+          <div class="buttons">
+            <a routerLink="/plans">
+              <button class="back-button">
+                <span>Back</span>
+              </button>
+            </a>
+            <button class="submit-button" (click)="onSubmit()">
+              <span>Submit</span>
+            </button>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+
+
+</main>
