--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
@@ -1,1 +1,37 @@
-<p>list-annual-reports works!</p>
+<!-- 
+displayedColumns: string[] = ['Index','Year','TotalExpense','TotalDepartment','Create-Date']; -->
+
+<main>
+
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" [hidden]="dataSource.length==0">
+
+        <ng-container matColumnDef="Index">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
+        </ng-container>
+        <ng-container matColumnDef="Year">
+            <th mat-header-cell *matHeaderCellDef> Year </th>
+            <td mat-cell *matCellDef="let element"> {{element.year}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="TotalExpense">
+            <th mat-header-cell *matHeaderCellDef> Total Expense </th>
+            <td mat-cell *matCellDef="let element"> {{element.totalDepartment}} </td>
+        </ng-container>
+        <ng-container matColumnDef="TotalDepartment">
+            <th mat-header-cell *matHeaderCellDef> Total Department </th>
+            <td mat-cell *matCellDef="let element"> {{element.totalDepartment}} </td>
+        </ng-container>
+        <ng-container matColumnDef="Create-Date">
+            <th mat-header-cell *matHeaderCellDef> Create-Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.createDate}} </td>
+        </ng-container>
+       
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      
+      </table>
+      <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)" [hidden]="dataSource.length==0">
+    </mat-paginator>
+</main>
