--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/list-annual-reports/list-annual-reports.component.html
@@ -29,28 +29,34 @@ displayedColumns: string[] = ['Index','Year','TotalExpense','TotalDepartment','C
 
         <ng-container matColumnDef="TotalExpense">
             <th mat-header-cell *matHeaderCellDef> Total Expense </th>
-            <td mat-cell *matCellDef="let element"> {{element.totalExpense}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.totalExpense| number:'1.0-0'}} VND </td>
         </ng-container>
+
         <ng-container matColumnDef="TotalDepartment">
             <th mat-header-cell *matHeaderCellDef> Total Department </th>
             <td mat-cell *matCellDef="let element"> {{element.totalDepartment}} </td>
         </ng-container>
+
         <ng-container matColumnDef="Create-Date">
             <th mat-header-cell *matHeaderCellDef> Create-Date </th>
             <td mat-cell *matCellDef="let element"> {{convertIsoDateToDdMmYyyy(element.createDate)}} </td>
         </ng-container>
+        
         <ng-container matColumnDef="Action">
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
-              <a [routerLink]="[ '/annualreport-details/', element.year ]"><mat-icon>visibility</mat-icon></a>        
+                <a [routerLink]="[ '/annualreport-details/', element.year ]"><mat-icon>visibility</mat-icon></a>
             </td>
-          </ng-container>
+        </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
+    <div *ngIf="dataSource.length==0" class="emtry-data-message">
+        No items match your credentials, please try again.
+    </div>
     <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
-        [hidden]="dataSource.length==0 || dataSource.length<=pageSize">
+        [hidden]="dataSource.length==0 || annualReports.length<=pageSize">
     </mat-paginator>
 </main>
