Planversion full update

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/planVersions/planVersions.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/planVersions/planVersions.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Expense Report History</h1>
+<h1 mat-dialog-title>Plan History</h1>
 <mat-dialog-content>
     <table mat-table [dataSource]="data" class="mat-elevation-z8">
 
