--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plans.component.html
@@ -65,9 +65,9 @@
       <th mat-header-cell *matHeaderCellDef>Department</th>
       <td mat-cell *matCellDef="let plan">{{plan.department}}</td>
     </ng-container>
-    
+  
     <ng-container matColumnDef="version">
-      <th mat-header-cell *matHeaderCellDef>version</th>
+      <th mat-header-cell *matHeaderCellDef>Version</th>
       <td mat-cell *matCellDef="let plan">V{{plan.version}}</td>
     </ng-container>
     <ng-container matColumnDef="status">
