--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
@@ -5,7 +5,7 @@
             <h6>Annual Report Details</h6>
         </div>
         <div class="abc">
-            <a routerLink="/" class="create-button">
+            <a routerLink="/" class="create-button" (click)="downloadFile(annualReport.year)">
                 <button> Export</button>
             </a>
         </div>
