--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -9,9 +9,9 @@
   <div *ngIf="plan" class="plan-details d-flex justify-content-between">
 
     <div class="left-item">
-      <h6>Plan: {{plan.planName}}</h6>
-      <h6>Term: {{plan.termName}}</h6>
-      <h6>Department: {{plan.departmentName}}</h6>
+      <h6>Plan: {{plan.plan}}</h6>
+      <h6>Term: {{plan.term}}</h6>
+      <h6>Department: {{plan.department}}</h6>
       <h6>Status: {{plan.status}}</h6>
     </div>
     <div class="right-item">
