re-style authentication page, add notification

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -10,14 +10,19 @@
                 </mat-card-header>
                 <mat-card-content>
                     <form class="w-100 mb-3" (ngSubmit)="onSubmit()">
-                        <mat-form-field class="w-100 mb-2">
+                        <mat-form-field class="w-100 mb-2" hideRequiredMarker="true">
                             <mat-label>Email</mat-label>
                             <input matInput type="email" placeholder="Ex. user@mail.com"
-                                [formControl]="emailFormControl" required/>
-                            <mat-error *ngIf="!emailFormControl.hasError('required') && emailFormControl.hasError('email')">Please enter a valid email address</mat-error>                            
-                            <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>                            
+                                [formControl]="emailFormControl" required />
+                            <mat-error
+                                *ngIf="!emailFormControl.hasError('required') && emailFormControl.hasError('email')">Please
+                                enter a valid email address</mat-error>
+                            <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
                         </mat-form-field>
-                        <button mat-raised-button type="submit" class="w-100">Reset password</button>
+                        <button mat-raised-button type="submit" class="w-100" [disabled]="isLoading">
+                            <span *ngIf="isLoading"><mat-spinner [diameter]="15" class="mt-1"></mat-spinner></span>
+                            <span *ngIf="!isLoading">Reset password</span>
+                        </button>
                     </form>
                     <a routerLink="/login"><i class="fa-solid fa-arrow-left"></i>Back to log in</a>
                 </mat-card-content>
