--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/reset-password/reset-password.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/reset-password/reset-password.component.css
@@ -28,12 +28,18 @@ mat-card {
 .content {
   position: absolute;
   top: 50%;
-  left: 25%;
+  left: 50%;
   transform: translate(-50%, -50%);
+  width: 400px;
 }
 
 #company-name {
   font-weight: bold;
+  margin-bottom: 6rem !important;
+}
+
+mat-card-header {
+  margin-bottom: 1.5rem !important;
 }
 
 mat-card-title {
@@ -54,12 +60,13 @@ mat-card-subtitle {
   color: #f8f8f8 !important;
 }
 
+button:hover {
+  background-color: #1a2547 !important;
+}
+
 a {
   text-decoration: none;
   color: #070f2b;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 a > i {
