--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/auth/forgot-password/forgot-password.component.html
@@ -20,7 +20,7 @@
                             <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
                         </mat-form-field>
                         <button mat-raised-button type="submit" class="w-100" [disabled]="isLoading">
-                            <span *ngIf="isLoading"><mat-spinner [diameter]="15" class="mt-1"></mat-spinner></span>
+                            <span *ngIf="isLoading"><mat-spinner [diameter]="20"></mat-spinner></span>
                             <span *ngIf="!isLoading">Reset password</span>
                         </button>
                     </form>
