--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/update-user-status/update-user-status.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/update-user-status/update-user-status.component.html
@@ -1,9 +1,9 @@
-<h1 mat-dialog-title>Update</h1>
+<h1 mat-dialog-title>Change Status</h1>
 <mat-dialog-content>
-    <p>Are you sure you want to update status this user?<p>
+    <p>Are you sure you want to change status this user?<p>
     <p class="note">Please, rethink your decision because this will affect to user</p>
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close id="cancel-button">Cancel</button>
-    <button mat-button [mat-dialog-close]="'update'" cdkFocusInitial id="update-button">Update</button>
+    <button mat-button [mat-dialog-close]="'update'" cdkFocusInitial id="update-button">Change</button>
 </mat-dialog-actions>
