update message bar

--- a/FinancialPlaningUI/FinancialPlaning/src/app/components/message-bar/message-bar.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/components/message-bar/message-bar.component.html
@@ -3,3 +3,7 @@
   <i [class]="getIconClass()"></i>
   {{ data.message }}
 </span>
+<span matSnackBarActions >
+  <button mat-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">Close</button>
+</span>
+
