--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/annual-report/annual-report-details/annual-report-details.component.html
@@ -59,6 +59,6 @@
 
   </table>
   <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
-    [hidden]="dataSource.length==0 || dataSource.length<pageSize">
+    [hidden]="dataSource.length==0  || (dataSource.length<pageSize && pageIndex==0)">
   </mat-paginator>
 </main>
