--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/report-details/report-details.component.html
@@ -89,6 +89,6 @@
 
   </table>
   <mat-paginator [length]="listSize" [pageSize]="pageSize" [pageIndex]="pageIndex" (page)="onPageChange($event)"
-    [hidden]="dataSource.length==0">
+    [hidden]="dataSource.length==0 || (dataSource.length<pageSize && pageIndex==0)">
   </mat-paginator>
 </main>
