--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -6,7 +6,7 @@
     </div>
 
   </div>
-  <div *ngIf="plan" class="plan-details d-flex justify-content-between">
+  <div  class="plan-details d-flex justify-content-between">
 
     <div class="left-item">
       <h6>Plan: {{plan.plan}}</h6>
@@ -16,7 +16,7 @@
     </div>
     <div class="right-item">
       <h6>Uploaded by: {{uploadedBy}}</h6>
-      <h6>Plan Due Date: {{convertIsoDateToDdMmYyyy(plan.planDureDate)}}</h6>
+      <h6>Plan Due Date: {{convertIsoDateToDdMmYyyy(planDueDate)}}</h6>
       <h6>Date: {{convertIsoDateToDdMmYyyy(plan.updateDate)}}</h6>
       <h6 class="underline" (click)="openPlanVersionsDialog()">Version: v.{{plan.version}}</h6>
     </div>
@@ -58,7 +58,7 @@
     </ng-container>
     <ng-container matColumnDef="Exchange rate">
       <th mat-header-cell *matHeaderCellDef> Exchange rate</th>
-      <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.exchangeRate}} </td>
     </ng-container>
     <ng-container matColumnDef="Total">
       <th mat-header-cell *matHeaderCellDef> Total (VND) </th>
@@ -83,7 +83,7 @@
     </ng-container>
     <ng-container matColumnDef="Expense Status">
       <th mat-header-cell *matHeaderCellDef>Expense Status </th>
-      <td mat-cell *matCellDef="let element"> Waiting for approval</td>
+      <td mat-cell *matCellDef="let element"> New</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
