--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/users/user-list/user-list.component.css
@@ -6,7 +6,7 @@ main {
     max-width: calc(100vw - 100px);
     left: 80px;
     padding: 30px;
-    background-color: #070f2b;
+    background-color: #aaa2a2;
   }
   
   .container {
@@ -15,7 +15,7 @@ main {
   
   h6 {
     font-size: smaller;
-    color: white;
+    color: rgb(17, 17, 17);
   }
   
   div:has(#page-title) {
@@ -23,7 +23,7 @@ main {
   }
   
   button {
-    background: #535c91;
+    background: #f5f5f5;
     border: none;
   }
   
@@ -35,9 +35,10 @@ main {
   }
   
   #create-button > button {
-    color: white;
+    color: rgb(15, 15, 15);
     padding: 10px 20px;
     border-radius: 10px;
+    border: 1px solid #0b0b0c;
   }
   
   #create-button i {
@@ -69,10 +70,10 @@ main {
     width: 50%;
     line-height: 2.5;
     padding: 0px 35px;
-    border: 1px solid #9290c3;
+    border: 1px solid #0b0b0c;
     border-radius: 10px;
-    background-color: #070f2b;
-    color: white;
+    background-color: #fafafa;
+    color: rgb(199, 24, 24);
   }
   
   .searchBar .fa-search {
@@ -81,14 +82,14 @@ main {
     left: 10px;
     transform: translateY(-50%);
     cursor: pointer;
-    color: #9290c3;
+    color: #0a0a0a;
   }
   
   table {
     width: 100%;
     min-height: auto;
-    background-color: #070f2b;
-    border: 1px solid #9290c3;
+    background-color: #f4f4f5;
+    border: 1px solid #0b0b0c;
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     overflow: hidden !important;
@@ -98,12 +99,13 @@ main {
   
   th {
     border-bottom: 1px solid #1b1a55;
-    color: white;
+    color: rgb(7, 7, 7);
   }
   
   td {
     border-top: 1px solid #535c91;
-    color: #9290c3;
+    color:rgb(8, 8, 8);
+    font-weight: bold;
   }
   
   ::ng-deep .mat-mdc-paginator {
@@ -113,8 +115,8 @@ main {
   }
   
   ::ng-deep .mat-mdc-paginator-outer-container {
-    background-color: #535c91;
-    color: white;
+    background-color: #b7b7b9;
+    color: rgb(15, 15, 15);
   }
   
   ::ng-deep .success .mdc-snackbar__label::before {
@@ -151,6 +153,9 @@ main {
     display: flex;
     align-items: center;
   }
+  .mat-icon {
+    color:rgb(99, 98, 98);
+}
   
   .custom-select {
     flex: 1; /* Số tự nhiên là phần tử `<select>` chiếm mọi không gian còn lại */
@@ -158,9 +163,10 @@ main {
     margin-left: 10px; /* Khoảng cách giữa phần tử `<select>` và `<button>` */
     padding: 9px 13px;
     font-size: 16px;
-    border-radius: 4px;
-    background-color:#535c91;
-    color: #fff;
+    border: 1px solid #0b0b0c;
+    border-radius: 10px;
+    background-color:#f1f1f1;
+    color: #0e0d0d;
     cursor: pointer;
     border: none;
   }
@@ -168,14 +174,14 @@ main {
   .custom-button {
     padding: 8px 12px;
     font-size: 16px;
-    border: none;
-    border-radius: 4px;
-    background-color:#535c91;
-    color: #fff;
+    border: 1px solid #0b0b0c;
+    border-radius: 10px;
+    background-color:#f1f1f1;
+    color:  #0e0d0d;
     cursor: pointer;
   }
   .h3,b{
-    color: white;
+    color: rgb(14, 13, 13);
   }
   
   
