--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/import-plan/import-plan.component.html
@@ -1,6 +1,6 @@
 <main>
   <div class="row">
-    <div class="col-md-12 col-lg-4">
+    <div class="left col-md-12 col-lg-3">
       <h1 class="mb-4">Import Plan</h1>
       <!-- <h5>Step 1/2: Please select a file to import</h5> -->
       <mat-card class="import-card">
@@ -25,7 +25,7 @@
         </div>
       </mat-card>
     </div>
-    <div class="col-md-12 col-lg-8">
+    <div class="right col-md-12 col-lg-9">
       <mat-card class="preview-card">
         <h3 class="mb-3">Preview</h3>
         <div class="table mat-elevation-z8">
