--- a/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/share/upload/upload.component.html
@@ -8,7 +8,7 @@
     <p>Browse File to Upload</p>
   </form>
 
-  <div *ngIf="file">
+  <div class="containter" *ngIf="file">
     <section class="uploaded-area">
       <li class="row">
         <div class="content upload">
