export mutil report

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/report/list-report/list-report.component.html
@@ -8,7 +8,7 @@
       <a  routerLink="/import-report" class="create-button" >
         <button> Import</button>
       </a>
-      <a routerLink="/" class="export-button" >
+      <a (click)="exportMutilreport()" class="export-button" >
         <button> Export</button>
       </a>
     </div>
